[package]
name = "diy_iot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coap-server = { git = "https://github.com/sikora77/coap-server-rs.git" }
coap-server-tokio = { git = "https://github.com/sikora77/coap-server-rs" }
tokio = "1.32.0"
coap-lite = "0.9.0"
async-trait = "0.1.61"
coap = "0.12.0"
env_logger = "0.9.0"
log = "0.4.16"
coap-client = { path = "../rust-coap-client" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
dotenv = "0.15.0"
